# coursework_3

./: README.md  main.py  pyproject.toml
tests/: .test_functions.py.swp  test_functions.py
utils/: functions.py
